# ray_tracer

./: .aider.chat.history.md  .aider.input.history  .gitignore  BUILD.md  BUILD_NOTES.md  BUILD_VERIFICATION_REFACTORING.md  CODING_STANDARDS.md  COMPLETE_FIX_SUMMARY.md  DARK_THEME_SUMMARY.md  Directory.Build.props  Directory.Build.targets  EMOJI_FIX.md  ERROR_CODE_SYSTEM_COMPLETE.md  FRESH_BUILD.md  GPU_OPTIMIZATION.md  INSTALL.md  LIBRARY_ARCHITECTURE.md  PERFORMANCE_ANALYSIS.md  QT6_INSTALLATION_GUIDE.md  QT_GUI_DOCUMENTATION.md  QT_GUI_TROUBLESHOOTING.md  QT_MIGRATION_SUMMARY.md  README.md  README_PACKAGE.txt  READY_TO_TEST.md  RELEASE_NOTES_v1.2.md  RELEASE_NOTES_v1.3.md  RELEASE_NOTES_v1.4.md  RENDER_TIME_FEATURE.md  SOLUTION_EXPLORER_GUIDE.md  VIDEO_SETUP_COMPLETE.md  build_all.ps1  build_cuda.targets  build_optix.targets  build_run.txt  build_run2.txt  build_run3.txt  build_success.txt  clean_vs_cache.bat  compare_images.py  (+40 more)
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.github/: copilot-instructions.md
RayTracer_Package/: INSTALL.md  README.md  test_front.ppm
RayTracer_v1.0_Portable/output/: image.ppm
archive/: BUILD_ISSUES.md  DARK_THEME_UI.md  DISTRIBUTION_GUIDE.md  GPU_OPTIMIZATION.md  GPU_OPTIMIZATION_v2.md  HARDWARE_COMPATIBILITY.md  HOW_TO_SHARE.md  MODERN_UI_CHANGES.md  README.md  RELEASE_NOTES_v1.5.md  RELEASE_v1.3_GUIDE.md  SHARING_QUICK_START.txt  VERSION_VERIFICATION_GUIDE.md
cpu_renderer/: cpu_interface.cpp  cpu_interface.h  cpu_renderer.vcxproj
cpu_renderer/x64/Debug/: raytracing_book.exe.recipe  raytracing_book.ilk  vc145.idb
cpu_renderer/x64/Release/: raytracing_book.exe.recipe  (+2 more)
docs/: CAMERA_SYSTEM.md  CLEANUP_SUMMARY.md  CODE_DOCUMENTATION_SUMMARY.md  ERROR_CODE_REFERENCE.md  MIS_IMPLEMENTATION_SUMMARY.md  MULTIPLE_IMPORTANCE_SAMPLING.md  PBRT_GGX_QUICKSTART.md  QT_GUI_VIDEO_INTEGRATION.md  SCENE_SELECTION.md  TESTING_MIS.md  VIDEO_FEATURE_SUMMARY.md  VIDEO_GENERATION.md  WHY_SAMPLING_FAILS.md
gpu/cuda/: .gitignore  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  README.md  cuda_interface.cu  cuda_renderer.vcxproj  cuda_scene.h  gpu_interface.cu  gpu_interface.h  gpu_renderer.vcxproj  host.cu  scene_serializer.cpp  scene_serializer.h  test_minimal.cu
gpu/optix/: README.md  optix_interface.cpp  optix_interface.h  optix_math_helpers.h  optix_programs.cu  optix_programs.ptx  optix_programs_example.cu  optix_renderer.cpp  optix_renderer.h  optix_types.h  path_tracing_strategy.cpp  path_tracing_strategy.h  recursive_path_tracer.cpp  recursive_path_tracer.h  renderer_config.cpp  renderer_config.h  scene_builder.cpp  scene_builder.h  wavefront_path_tracer.h
gui_launcher/: RayTracerGUI.vcxproj  gui_resource.rc  main.cpp  main_modern.cpp  resource.h
launcher/: book_bridge.cpp  camera_path.h  launcher.vcxproj
optix_renderer/: optix_renderer.vcxproj
qt_gui/: Makefile  Makefile.Debug  Makefile.Release  RayTracerGUI.pro  create_icon.ps1  error_handler.h  main.cpp  mainwindow.cpp  mainwindow.h  verify_qt6.ps1
qt_gui/release/: moc_mainwindow.cpp
ray_tracer/: ray_tracer.vcxproj  ray_tracer.vcxproj.filters
raytracing_book/: raytracing_book.vcxproj
releases/: README.md  RayTracer_Download.html
resources/: app_icon.rc  resource.h
scripts/: README.md  build_all.bat  build_all.ps1  build_and_deploy.ps1  setup_env.ps1
src/TheNextWeek/: rtw_stb_image.h
src/TheRestOfYourLife/: aabb.h  book_entry.h  bvh.h  camera.h  color.h  cornell_box_scene.h  error_codes.h  hittable.h  interval.h  main.cc  material.h  quad.h  rtw_stb_image.h  rtweekend.h  scene_registry.h  scenes.h  sphere.h  texture.h  vec3.h
src/shared/: fresnel.h  math_utils.h  microfacet.h  scene_descriptor.h
tests/: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  build_and_run_tests.bat  build_and_run_tests.ps1  gtest_all.cpp  gtest_main_wrapper.cpp  ray_tracer_tests.vcxproj
tests/integration/: cpu_gpu_comparison_tests.cpp  render_tests.cpp  serialization_tests.cpp
tests/unit/: bvh_tests.cpp  camera_tests.cpp  energy_conservation_tests.cpp  gpu_render_tests.cpp  interface_tests.cpp  math_tests.cpp  scene_registry_tests.cpp  scene_tests.cpp
x64/Debug/: image.ppm
x64/Release/: image.ppm  run_output.txt
(+146 files in other folders)
